[iOS] Mail compose becomes unresponsive after pasting in text and attempting to type https://bugs.webkit.org/show_bug.cgi?id=232764 rdar://84669661

Reviewed by Geoff Garen.

Source/WebCore:

After some recent changes in UIKit, keyboard code now calls into `-requestDocumentContext:completionHandler:`
after inserting text with the software keyboard, and specifically requests sentence-granularity text context
near the selection. This triggered an existing bug in WebKit, where we hang underneath
`WebPage::requestDocumentEditingContext` when trying to move backwards by sentence granularity, when computing
`contextBeforeStart`; this hang occurs because it's possible for the logic in `nextSentenceBoundaryInDirection`
(inside WebCore) to return a visible position that is in the opposite direction, relative to the given starting
position and direction. In turn, this means we end up revisiting visible positions while moving to the next
sentence boundary.

To prevent this, we make two minor adjustments in editing code. First, in `nextSentenceBoundaryInDirection()`,
we use `result` instead of the given `vp` when trying to find the next sentence boundary, in the case where the
given visible position is not already within a sentence. This was presumably the original intent of this code,
which is to "iterate to the start of the next sentence (when moving downstream) or the end of the previous
sentence (when moving upstream)". However, since `vp` is currently used here instead, we end up moving in the
wrong direction and return the start of the current sentence when moving downstream, or the end of the current
sentence when moving upstream.

Fixing this issue is actually already sufficient in order to address the hangs encountered in the radar;
however, the test case still hits subsequent debug assertions in `moveByGranularityRespectingWordBoundary`, due
to `atBoundaryOfGranularity` never returning `true`, even for visible positions that are at the start or end of
sentences. In lieu of debug assertions, this causes `-requestDocumentContext` to effectively ignore the given
granularity and traverse too far in either direction, due to `atBoundaryOfGranularity` always being `false` (we
avoid infinitely looping and bail because after fixing the first bug above, `nextPosition` eventually becomes
null).

To address this assertion, we make a second tweak to `atBoundaryOfGranularity` that allows us to return `true`
if the given position is already at a sentence boundary (instead of marching to the previous or next sentence
and then moving in the opposite direction). The latter was added in r253561 to fix some corner cases where
`startOfSentence()` or `endOfSentence()` would end up moving us past the next (or previous) sentence, but this
seems to break some existing scenarios where the given position is already at the start or end of the sentence.

Test: DocumentEditingContext.RequestSentencesAfterTextInsertion

* editing/VisibleUnits.cpp:
(WebCore::atBoundaryOfGranularity):
(WebCore::nextSentenceBoundaryInDirection):

See above for more details.

Tools:

Add an API test that exercises the hang (and also verifies that we don't hit any debug assertions in the
process).

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm:
(TEST):
* TestWebKitAPI/Tests/WebKitCocoa/InsertTextAlternatives.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKitCocoa/simple-editor.html: Added.
* TestWebKitAPI/ios/UIKitSPI.h:

Drive-by fixes: remove some old staging declarations for UIKit SPI that has long been in the internal iOS 15
SDK. Remove the staging categories and definitions, and move them to the non-internal SDK section instead.



Canonical link: https://commits.webkit.org/243918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285359 268f45cc-cd09-0410-ab3c-d52691b4dbfc